@@ -18,8 +18,12 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 
+import static org.apache.commons.collections4.CollectionUtils.emptyIfNull;
+import static org.apache.commons.lang3.StringUtils.defaultIfEmpty;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLAIMANT_TITLE;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.NO;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.RESPONDENT_TITLE;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.YES;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.Constants.MONTH_STRING_DATE_FORMAT;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.dynamiclists.DynamicJudgements.NO_HEARINGS;
 
@@ -46,10 +50,7 @@ public final class DynamicListHelper {
     }
 
     public static DynamicValueType getDynamicValue(String value) {
-        DynamicValueType dynamicValueType = new DynamicValueType();
-        dynamicValueType.setCode(value);
-        dynamicValueType.setLabel(value);
-        return dynamicValueType;
+        return getDynamicCodeLabel(value, value);
     }
 
     public static DynamicValueType getDynamicCodeLabel(String code, String label) {
@@ -65,7 +66,7 @@ public final class DynamicListHelper {
         if (party.equals(CLAIMANT_TITLE)) {
             dynamicValueType = getDynamicCodeLabel("C: " + caseData.getClaimant(), caseData.getClaimant());
         } else if (party.equals(RESPONDENT_TITLE)) {
-            dynamicValueType = listItems.get(0);
+            dynamicValueType = listItems.getFirst();
         } else {
             dynamicValueType = getDynamicValue(party);
         }
@@ -80,7 +81,7 @@ public final class DynamicListHelper {
                 String hearingNumber = hearing.getHearingNumber();
                 String hearingType = hearing.getHearingType();
                 String venue = getHearingVenue(hearing);
-                String listedDate = getListedDate(hearing.getHearingDateCollection().get(0).getValue());
+                String listedDate = getListedDate(hearing.getHearingDateCollection().getFirst().getValue());
 
                 String hearingData = String.format(DYNAMIC_HEARING_LABEL_FORMAT, hearingNumber, hearingType, venue,
                         listedDate);
@@ -96,22 +97,13 @@ public final class DynamicListHelper {
         DynamicFixedListType hearingVenue;
         if (StringUtils.isNotBlank(hearing.getHearingVenueScotland())) {
             TribunalOffice tribunalOffice = TribunalOffice.valueOfOfficeName(hearing.getHearingVenueScotland());
-            switch (tribunalOffice) {
-                case GLASGOW:
-                    hearingVenue = hearing.getHearingGlasgow();
-                    break;
-                case ABERDEEN:
-                    hearingVenue = hearing.getHearingAberdeen();
-                    break;
-                case DUNDEE:
-                    hearingVenue = hearing.getHearingDundee();
-                    break;
-                case EDINBURGH:
-                    hearingVenue = hearing.getHearingEdinburgh();
-                    break;
-                default:
-                    throw new IllegalStateException("Unexpected Scotland tribunal office " + tribunalOffice);
-            }
+            hearingVenue = switch (tribunalOffice) {
+                case GLASGOW -> hearing.getHearingGlasgow();
+                case ABERDEEN -> hearing.getHearingAberdeen();
+                case DUNDEE -> hearing.getHearingDundee();
+                case EDINBURGH -> hearing.getHearingEdinburgh();
+                default -> throw new IllegalStateException("Unexpected Scotland tribunal office " + tribunalOffice);
+            };
         } else {
             hearingVenue = hearing.getHearingVenue();
         }
@@ -145,5 +137,18 @@ public final class DynamicListHelper {
         String listedDate = dateListedType.getListedDate().substring(0, 10);
         LocalDate date = LocalDate.parse(listedDate);
         return date.format(DateTimeFormatter.ofPattern(MONTH_STRING_DATE_FORMAT));
+    }
+
+    public static List<DynamicValueType> createDynamicRespondentWithEccList(CaseData caseData) {
+        List<DynamicValueType> listItems = new ArrayList<>();
+
+        emptyIfNull(caseData.getRespondentCollection()).forEach(respondent -> {
+            RespondentSumType respondentValue = respondent.getValue();
+            if (YES.equals(defaultIfEmpty(respondentValue.getRespondentEcc(), NO))) {
+                listItems.add(getDynamicCodeLabel(respondent.getId(), respondentValue.getRespondentName()));
+            }
+        });
+
+        return listItems;
     }
 }
